--- a/lab/hl_it.htm
+++ b/lab/hl_it.htm
@@ -24,13 +24,13 @@
 
 <table width="100%" height="100%" cellpadding="24pt" cellspacing="48pt"><tr><td width="50%" height="100%" align="left" valign="bottom">
 
-<center><a href="aborigeno.htm"><img src="o_m.jpg" border="0"></a></center>
+<center><a href="aborigeno.htm"><img src="o_m.jpg" width="48%" border="0"></a></center>
 
 <br><br><br><br>
 
 <div align="justify">
 
-<font face="arial" size="4">
+<font face="arial" size="5">
 
 Salve!
 
@@ -56,7 +56,7 @@ Tempo fa ho anche raccolto alcune <a class="simple" href="change/paperi_e_draghi
 
 <div align="justify">
 
-<font face="arial" size="4">
+<font face="arial" size="5">
 
 Mi sono adoprato per rifondare la società su basi di correttezza, ad esempio promuovendo la <a class="simple" href="ars/index_it.htm" target="perio">periodica redistribuzione</a> (grazie ad una assunzione pro tempore) dei ruoli del pubblico impiego, in modo da garantire un <a class="simple" href="ars/lmg.htm" target="lavo">lavoro minimo</a> ad ogni componente della società e mettere così in moto una <a class="simple" href="ars/index.htm" target="armo">armonica rotazione sociale</a>. Ed ho cercato in continuazione strumenti che aiutassero una reciproca comprensione, come ad esempio questo <a class="simple" href="patchwork/index.htm" target="desk">desktop</a> di proposizione, confronto e delibera o che favorissero l'evoluzione sociale, come l'<a class="simple" href="mercato/index.htm" target="asse">assemblea popolare permanente premiata</a>. E mi son rallegrato alla scoperta dell'esistenza di <a class="simple" href="ars/principi.htm" target="princi">due principi</a> applicando i quali viene garantita la democrazia e di un <a class="simple" href="ars/singolo_indicatore.htm" target="indi">indicatore</a> in grado di determinarne con precisione qualità e quantità. Se mai al mondo vi saranno vere <a class="simple" href="repita/index.htm" target="repita">Democrazie e Repubbliche</a>, vuol dire che avrà conosciuto e fatti suoi questi lavori.
 
@@ -97,7 +97,7 @@ Tutto ciò non di meno, ho dedicato il mio lavoro ad ogni escluso/reietto dalla 
 user = "dda";
 site = "hyperlinker";
 
-document.write('<font face=arial color=white size=4><a class=asimple href=\"mailto:' + user + '@' + site + '.org' + '\">');
+document.write('<font face=arial color=white size=5><a class=asimple href=\"mailto:' + user + '@' + site + '.org' + '\">');
 document.write('Hyper Linker' + '</a></font>');
 
 // End -->
@@ -107,7 +107,7 @@ document.write('Hyper Linker' + '</a></font>');
 
 <br><br>
 
-<font size="2" color=""><i>
+<font size="3" color=""><i>
 
 Tutto questo lavoro non sarebbe stato compiuto se avessi avuto per bussola denaro e successo.<br>
 Non foss'altro per questo, se lo desiderate e potete permettervelo: <a class="simple" href="bottega/index.htm">locupletatemi</a> a volontà.
