--- a/lab/repubblica/dir_lic.html
+++ b/lab/repubblica/dir_lic.html
@@ -38,11 +38,11 @@ Un vero avanzamento culturale e sociale negli ultimi 80 anni non è avvenuto per
 
 </p><p>
 
-Qualcosa da ridire? Allora facciamo un conto. Ottant'anni di finta "repubblica", di una centralità che altro non è che il vecchio stato monarchico spacciato per "repubblica". Interi parlamenti e senati ricolmi di tizi che non hanno la minima idea di cosa sia davvero la Repubblica, di come essa costruisca la Democrazia. Quanti presidenti in questi 80 anni senza una vera Repubblica? Quanti stipendi tra tutti codesti grandi proprietari della nostra santa Repubblica? E quanri professori, quanti ricercatori, quanti epserti, quanti serbatoi di pensiero, tutti a raccontarci la fine della Democrazia quando questa ancora non è potuta sorgere in alcun posto del mondo! Quanto denaro hanno intasvato tutti costoro in otto decenni, lasciando un mondo in balia di una incultura risalente ad un secolo fa? No, non c'è prezzo per quello che hanno fatto e devono ripagare, tutti, dal primo all'ultimo. E non c'è prezzo per ricompensare proporzionalmente chi invece ha fatto chiarezza.
+Qualcosa da ridire? Allora facciamo un conto. Ottant'anni di finta "repubblica", di una centralità che altro non è che il vecchio stato monarchico spacciato per "repubblica". Interi parlamenti e senati ricolmi di tizi che tuttora non hanno idea di cosa sia davvero la Repubblica, di come essa costruisca la Democrazia. Quanti presidenti in questi 80 anni senza una Repubblica? Quanti stipendi tra tutti codesti grandi proprietari della nostra santa Res Publica? E quanti professori, quanti ricercatori, quanti esperti, quanti immensi serbatoi di pensiero, tutti a raccontarci la fine della Democrazia quando questa ancora non è potuta sorgere in alcun luogo al mondo! Quanto denaro hanno intascato tutti costoro in otto decenni, lasciando un mondo in balia di una incultura risalente ad un secolo fa e che solo per questo rimane afflitto da guerre con milioni di morti e problemi senza fine? No, non c'è prezzo per il male che hanno fatto e devono ripagare, tutti, dal primo all'ultimo. E non c'è prezzo per ricompensare proporzionalmente chi invece ha fatto chiarezza.
 
 </p><p>
 
-Ecco perché ogni parola, progetto, visione del Laboratorio Eudemonia ha un prezzo. Perché a molti umani, e non più ad uno solo, deve venire un ardente desiderio di fare del suo meglio e non del suo peggio. Come invece han fatto tutti quelli sopra detti. 
+Ecco perché ogni parola, progetto, visione del Laboratorio Eudemonia ha un prezzo. Perché a molti umani, e non più ad uno solo, deve venire un ardente desiderio di fare del suo meglio e non del suo peggio. Come invece han fatto quelli sopra detti a stipendio garantito. 
 
 <!--
 
