--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -56,23 +56,23 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
-<a href="dna.html"></a>
+<a href="dna.html">...</a>
 
 </p><p>
 
-<a href="dna.html"></a>
+<a href="dna.html">...</a>
 
 </p><p>
 
-<a href="dna.html"></a>
+<a href="dna.html">...</a>
 
 </p><p>
 
-<a href="dna.html"></a>
+<a href="dna.html">...</a>
 
 </p><p>
 
-<a href="dna.html"></a>
+<a href="dna.html">...</a>
 
 </p><p>
 
