--- a/lab/tec/almanacchi.htm
+++ b/lab/tec/almanacchi.htm
@@ -53,7 +53,7 @@ ALMANACCO
 
 <br><br><br>
 
-<img src="arrow_left.gif"><img src="blank.gif"><a class="procedi" href="licenza_pdf.htm">| indietro |</a><img src="blank.gif"><img src="arrow_left.gif">
+<img src="arrow_left.gif"><img src="blank.gif"><a class="procedi" href="pubblicazioni.htm">| indietro |</a><img src="blank.gif"><img src="arrow_left.gif">
 
 <br><br><br><br>
 
