--- a/lab/tec/dt/earthcal.html
+++ b/lab/tec/dt/earthcal.html
@@ -49,7 +49,7 @@ a:active {
 
 <a href="../ebook.pdf">the e-book</a>
 <span style="margin-right: 48px;"></span> 
-<a href="../index.htm">the site</a>
+<a href="../index.htm">the historic, original site</a>
 <span style="margin-right: 48px;"></span> 
 <a href="../50_en.pdf">sample almanac</a> 
 
