--- a/lab/tec/legale.htm
+++ b/lab/tec/legale.htm
@@ -47,11 +47,11 @@ COPYRIGHT & TRADEMARK
 
 <div align="justify">
 
-<font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> (libro, almanacco e sito Internet) è opera e proprietà del <i>Laboratorio Eudemonia</i>. I diritti, tranne alcuni ove e come chiaramente specificato, sono riservati. Tali diritti sono protetti tanto dalle leggi umane quanto da quelle sulle quali è fondata la realtà.
+<font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> (libro, almanacco, sito Internet) è opera e proprietà del <i>Laboratorio Eudemonia</i>.
 
 <br><br>
 
-La denominazione <font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> ed il logo del suo almanacco, contenente l'originale nomenclatura da esso utilizzata, di seguito riportati in forma grafica, sono marchi del Laboratorio Eudemonia:
+La denominazione <font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> ed il logo con la speciale nomenclatura sono entrambi marchi del <i>Laboratorio Eudemonia</i>:
 
 <br><br><br>
 
@@ -65,19 +65,15 @@ La denominazione <font color="#82750f"><i><b>Il Calendario della Terra</b></i></
 
 </td></tr></table>
 
-<br><br>
+<br><br><br>
 
-E' vietato qualsiasi utilizzo commerciale o pubblico tanto della denominazione quanto della nuova nomenclatura settimanale e settennale adottata da <font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> al di fuori dei termini espressi nella speciale <a class="simple" href="licenza_1.htm">licenza</a> rilasciata per l'utilizzo dell'almanacco e della sua data breve.
-
-<br><br>
-
-Gentilmente: si chiede ai media, qualora volessero citare denominazione e nomenclatura, di notificare il loro essere marchi caratterizzanti uno specifico prodotto e salvaguardanti la sua funzione sociale.
+<center><a class="simple" HREF="licenza_1.htm">LICENZA D'USO</a></center>
 
 </div>
 
 </FONT>
 
-<br><br><br>
+<br><br>
 
 <center><FONT face="verdana" SIZE="1">
 
