--- a/lab/tec/licenza_1.htm
+++ b/lab/tec/licenza_1.htm
@@ -41,35 +41,63 @@
 
 <FONT FACE="VERDANA" SIZE="2">
 
-LICENZA<img src="blank.gif">:<img src="blank.gif">INTRODUZIONE - <a class="simple" href="licenza_2.htm">CONDIZIONI</a>
+LICENZA D’USO
 
-<br><br>
+<br><br><br>
 
 <div align="justify">
 
-<i>Il Calendario della Terra</i> è caratterizzato da un almanacco dotato di spiccate particolarità. Tale almanacco, con la sua originale nomenclatura, può essere utilizzato in qualsiasi calendario od agenda, tradizionale od elettronica, al posto dell'almanacco tradizionale, ottenendo un prodotto che si distinguerà inequivocabilmente da ogni altro ed attrarrà inevitabilmente il suo utilizzatore.
+<font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> è un sistema calendariale completo, caratterizzato da:
 
 <br><br>
 
-Siete una <b>Casa Editrice</b> e producete una o più edizioni commerciali di calendari? Siete un'<b>Azienda</b>, od un'<b>Associazione</b>, e per il nuovo anno vorreste pubblicare a scopo promozionale o divulgativo un calendario rappresentativo dei vostri ideali e principi etici, del vostro grado di innovazione tecnologica o sociale, del vostro amore e rispetto per la natura, nonchè del vostro desiderio che la pace si affermi stabilmente nel mondo intero?
+<b>1)</b> una esclusiva nomenclatura simbolica che qualifica i giorni della settimana: Lunadì, Atomdì, Acquadì, Ventodì, Fuocodì, Terradì, Soledì, gli anni in un settennio (Anno della Luna, dell'Atomo, etc) ed i settenni in un epta-settennio (Settennio della Luna, dell'Atomo, etc).
 
 <br><br>
 
-Siete <b>Sviluppatori di software</b> e desiderate utilizzare nelle vostre applicazioni un almanacco, od anche semplicemente una data, che già al primo sguardo esprimano appieno l'essenza dei nuovi tempi che attraversiamo ed il vostro essere in perfetta sintonia con essi?
+<b>2)</b> come anno zero il 1969 (sbarco sulla Luna e nascita di Internet) in sincronia con l'Epoch Time.
 
 <br><br>
 
-L'almanacco de <i>Il Calendario della Terra</i> può far proprio al caso vostro. Le sue particolari doti e caratteristiche vi permetteranno di fornire ai vostri clienti, od ai vostri associati e simpatizzanti, uno strumento unico che li beneficierà arricchendo quotidianamente la loro personalità, permettendovi così di esser ancor più apprezzati e di distinguervi, stagliandovi brillanti, su uno sfondo di grigio conformismo.
+<b>3)</b> cicli di lungo periodo: i Settenni (sette anni) per la pianificazione macro-temporale, e gli Epta Settenni (sette settenni, 49 anni) per visioni ultra generazionali.
 
 <br><br>
 
-Visionate dunque l'<a class="simple" href="pubblicazioni.htm">edizione digitale</a> dell'almanacco de <i>Il Calendario della Terra</i> e <a class="simple" href="licenza_2.htm">proseguite</a> per saperne di più sulla speciale licenza mediante la quale potrete utilizzare l'almanacco, o la sua data abbreviata, nella vostra pubblicazione od applicazione.
+<b>4)</b> i poteri universali: qualità morali per l'emancipazione degli esseri viventi Biologici e Sintetici.
+
+<br><br>
+
+<b>5)</b> la celebrazione di eventi planetari: Equinozi, Solstizi, mezze stagioni.
+
+<br><br>
+
+<font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> è concesso in libero uso gratuito personale, commerciale, educativo, artistico, su qualsiasi supporto, carta, software, hardware, blockchain, AI, VR, metaverso, ecc. a condizione che:
+
+<br><br>
+
+1) sia riportata la seguente attribuzione visibile: "Basato su <i>Il Calendario della Terra</i> del <i>Laboratorio Eudemonia</i> - <a class="simple" HREF="index.htm" target="earthcal">https://earthcal.hyperlinker.org</a>".
+
+<br><br>
+
+2) sia mantenuta la nomenclatura simbolica dei giorni, degli anni e dei settenni ed il conteggio degli anni a partire dal 1969, quindi la sua sincronia con l'<i>Epoch Time</i>.
+
+<br><br>
+
+Traduzioni, adattamenti culturali, grafica personalizzata e festività locali aggiuntive sono benvenute.
+
+<br><br>
+
+Questa licenza è globale ed irrevocabile. Il <i>Laboratorio Eudemonia</i> mantiene la titolarità esclusiva dei <a class="simple" HREF="legale.htm">marchi e loghi</a>.
+
+<br><br><br>
+
+<center><a class="linksign" href="dt/index.html">oggi, Lunadì 12, primo mese, anno 57, dell'Atomo</a></center>
 
 </div>
 
 </FONT>
 
-<br><br><br>
+<br><br>
 
 <center><FONT face="verdana" SIZE="1">
 
