--- a/lab/tec/linee.htm
+++ b/lab/tec/linee.htm
@@ -123,15 +123,11 @@ a.tec_it_1 {font-family: verdana; font-size: 8pt; font-weight: medium; color: wh
 
 </p>
 
-Per visualizzare la data sul proprio computer occorre impostare la modalità <i>active desktop</i>. Qui potete vedere un <a class="simple" href="desktop_it.htm">risultato</a> possibile.
-
-<br><br>
-
-Per prelevare ed utilizzare lo script, è necessario accettare e rispettare i termini dell'accordo riportato alla pagina seguente:
+Per visualizzare la data sul proprio computer occorre impostare la modalità <i>active desktop</i>. Qui potete vedere un <a class="simple" href="desktop_it.htm">risultato</a> possibile. Questo script viene fornito nelle condizioni in cui si trova, senza alcuna garanzia di buon funzionamento.
 
 <br><br><br>
 
-<center><img src="arrow_right.gif"><img src="blank.gif"><a class="procedi" href="licenza_scr.htm">| prosegui |</a><img src="blank.gif"><img src="arrow_left.gif"></center>
+<center><img src="arrow_right.gif"><img src="blank.gif"><a class="procedi" href="licenza_1.htm">| LICENZA D'USO |</a><img src="blank.gif"><img src="arrow_left.gif"></center>
 
 <!--
 
@@ -143,7 +139,7 @@ Se desiderate, alla data de <i>Il Calendario della Terra</i> potete abbinare l'o
 
 </FONT>
 
-<br><br><br>
+<br><br>
 
 <center><FONT face="verdana" SIZE="1">
 
