--- a/lab/tec/pause/licenza_pdf.htm
+++ b/lab/tec/pause/licenza_pdf.htm
@@ -43,7 +43,7 @@
 
 Accordo di licenza<br>per il download e l'uso dei file .pdf<br> del libro e dell'almanacco de<br><i>Il Calendario della Terra</i>
 
-<br><br><br>
+<br><br>
 
 <table width="100%" cellpadding="24pt" bordercolor="violet" border="0"><tr><td width="50%" align="left" valign="middle">
 
@@ -51,15 +51,15 @@ Accordo di licenza<br>per il download e l'uso dei file .pdf<br> del libro e dell
 
 <FONT FACE="VERDANA" SIZE="2"><i>
 
-Il <a class="simple" href="pubblicazioni.htm">libro e l'almanacco</a> de "Il Calendario della Terra", ed i file in formato .pdf che li contengono, sono, per morale e legittimo diritto, proprietà esclusiva del Laboratorio Eudemonia, che li ha ideati e prodotti, e sono quindi protetti sia dalle leggi sul copyright ed il trademark sia da quelle dell'etica.
+Il <a class="simple" href="pubblicazioni.htm">libro e l'almanacco</a> de "Il Calendario della Terra", ed i file in formato .pdf che li contengono, sono proprietà del Laboratorio Eudemonia e protetti dalle leggi sul copyright ed il trademark.
 
 <br><br>
 
-Con questo accordo di licenza il Laboratorio Eudemonia, pur rimanendo unico proprietario dei file, ne concede la libera visione e la stampa ad esclusivo uso personale, quindi non commerciale nè pubblico.
+Il Laboratorio Eudemonia, pur rimanendo unico proprietario dei file, ne concede la libera visione e la stampa tanto ad uso personale quanto commerciale, quindi pubblico. A patto di: riconoscere il lavoro originario compiuto dal Laboratorio Eudemonia (riportando un link a questo sito) e rispettare lo standard del Calendario (facendo riferimento a questo logo) per garantirne la sua funzione sociale come sistema condiviso.
 
-<br><br><br>
+<br><br>
 
-Attenzione! Tanto la denominazione "Il Calendario della Terra" quanto il logo del suo almanacco, contenente l'originale nomenclatura settimanale da esso utilizzata, sono marchi del Laboratorio Eudemonia:
+La denominazione "Il Calendario della Terra" ed il logo del suo almanacco, contenente l'originale nomenclatura da esso utilizzata, sono marchi del Laboratorio Eudemonia:
 
 <br><br><br>
 
@@ -75,33 +75,9 @@ Attenzione! Tanto la denominazione "Il Calendario della Terra" quanto il logo de
 
 <br><br>
 
-E dunque vietato qualsiasi utilizzo commerciale, od anche semplicemente pubblico, di entrambi i marchi, e quindi anche della nuova nomenclatura settimanale adottata da "Il Calendario della Terra", per realizzare un qualsivoglia prodotto proprio, a meno di sottoscrivere e rispettare per intero la specifica <a class="simple" href="licenza_1.htm">licenza</a>.
+I file .pdf qui sotto vengono forniti nelle condizioni in cui si trovano, senza alcuna garanzia di esattezza o buon funzionamento. In ogni caso il Laboratorio Eudemonia ne concede l'accesso solo se liberato da qualsiasi obbligo, onere, o peso, di qualsiasi genere e per qualsiasi motivo.
 
 <br><br><br>
-
-E' vietata qualsiasi manipolazione elettronica dei file .pdf: ad esempio, ma non soltanto, l'estrazione di singoli componenti, sia testo che immagini od altro, e la loro elaborazione o qualsiasi genere di utilizzo.
-
-<br><br>
-
-I file .pdf vengono forniti nelle condizioni in cui si trovano, senza alcuna garanzia di buon funzionamento, esattezza o validità. Chi ne farà uso lo farà a proprio personale rischio e pericolo. In ogni caso il Laboratorio Eudemonia concede questa licenza solo se liberato da qualsiasi obbligo, onere, o peso, di qualsiasi genere e per qualsiasi motivo.
-
-<br><br><br>
-
-Qualora vi trovaste anche solo in un punto in disaccordo con quanto qui scritto, siete richiesti di non effettuare il prelievo dei file .pdf del libro e dell'almanacco:
-
-<br><br>
-
-<center>
-
-</i><a class="bg_yellow_red" href="../index.htm">|_RIFIUTO_|</a><i>
-
-</center>
-
-<br><br>
-
-Qualora foste invece in completo accordo con essa, vi auguriamo una buona fruizione del nostro lavoro e lunghi giorni ricchi di tanta felicità!
-
-<br><br>
 
 <table width="100%"><tr><td width="50%" align="center">
 
@@ -121,11 +97,9 @@ Qualora foste invece in completo accordo con essa, vi auguriamo una buona fruizi
 
 </td></tr></table>
 
-<font size="1">Questa licenza è attiva dal 35 - Versione 1.3</font>
-
 </FONT>
 
-<br><br><br>
+<br>
 
 <center><FONT face="verdana" SIZE="1">
 
