--- a/lab/tec/pubblicazioni.htm
+++ b/lab/tec/pubblicazioni.htm
@@ -63,11 +63,11 @@ Ecco allora qui<br>immediatamente disponibili on line<br>in formato .pdf:
 
 <FONT FACE="VERDANA" SIZE="2">
 
-<a href="licenza_pdf.htm" title="il libro in formato .pdf"><img src="libro_1.jpg" border="0"></a>
+<a href="libro.pdf" title="il libro in formato .pdf"><img src="libro_1.jpg" border="0"></a>
 
 <br><br>
 
-<a class="simple" href="licenza_pdf.htm" title="il libro in formato .pdf">il libro</a>
+<a class="simple" href="libro.pdf" title="il libro in formato .pdf">il libro</a>
 
 </FONT>
 
@@ -83,11 +83,11 @@ Ecco allora qui<br>immediatamente disponibili on line<br>in formato .pdf:
 
 <FONT FACE="VERDANA" SIZE="2">
 
-<a href="licenza_pdf.htm" title="l'almanacco in formato .pdf"><img src="almanacco_1.jpg" border="0"></a>
+<a href="almanacchi.htm" title="l'almanacco in formato .pdf"><img src="almanacco_1.jpg" border="0"></a>
 
 <br><br>
 
-<a class="simple" href="licenza_pdf.htm" title="l'almanacco di un anno qualsiasi in formato .pdf">l'almanacco</a>
+<a class="simple" href="almanacchi.htm" title="l'almanacco di un anno qualsiasi in formato .pdf">l'almanacco</a>
 
 </FONT>
 
@@ -132,17 +132,11 @@ od in
 
 -->
 
-<font color="red" size="1">
-
-E' richiesto l'Acrobat Reader<br>
-e qualche secondo<br>
-per il download
-
-</font>
+<center><a class="simple" HREF="licenza_1.htm">LICENZA D'USO</a></center>
 
 </FONT>
 
-<br><br><br>
+<br><br>
 
 <center><FONT face="verdana" SIZE="1">
 
