--- a/lab/tec/story.htm
+++ b/lab/tec/story.htm
@@ -120,7 +120,7 @@ We print a first limited <a class="storia" href="35_1.jpg">edition</a> in Englis
 <br><br><br>
 
 Publishings continue happily, regularly ... for few friends.<br>
-If you want finance our activities, feel free to <a class="storia" href="http://www.hyperlinker.com/donations.htm">donate</a>.
+If you want finance our activities, feel free to <a class="storia" href="donations.htm">enrich</a>.
 
 
 <br><br><br>
