--- a/lab/tec/almanacs.htm
+++ b/lab/tec/almanacs.htm
@@ -53,7 +53,7 @@ ALMANAC
 
 <br><br><br>
 
-<img src="arrow_left.gif"><img src="blank.gif"><a class="procedi" href="pdf_license.htm">| back |</a><img src="blank.gif"><img src="arrow_left.gif">
+<img src="arrow_left.gif"><img src="blank.gif"><a class="procedi" href="publishings.htm">| back |</a><img src="blank.gif"><img src="arrow_left.gif">
 
 <br><br><br><br>
 
