--- a/lab/tec/legal.htm
+++ b/lab/tec/legal.htm
@@ -47,11 +47,7 @@ COPYRIGHT & TRADEMARK
 
 <div align="justify">
 
-<font color="#82750f"><b><i>The Earth Calendar</i></b></font> (book, almanac and website) is work and property of the <i>Eudaemony Laboratory</i>. All the rights, made exception for some of them where and how clearly specified, are reserved. These rights are protected as much by the human laws as much by those on which is based our reality. 
-
-<br><br>
-
-The logo of the almanac of <font color="#82750f"><b><i>The Earth Calendar</i></b></font>, containing its original weekly nomenclature, below reported in graphical form, is trademark of the <i>Eudaemony Laboratory</i>:
+<font color="#82750f"><b><i>The Earth Calendar</i></b></font> (book, almanac, website) is the work and property of <i>Laboratorio Eudemonia</i>. The name <font color="#82750f"><b><i>The Earth Calendar</i></b></font> and the logo featuring its special nomenclature are both trademarks of <i>Laboratorio Eudemonia</i>.
 
 <br><br><br>
 
@@ -67,17 +63,17 @@ The logo of the almanac of <font color="#82750f"><b><i>The Earth Calendar</i></b
 
 <br><br>
 
-All commercial or public use of the name and of the new weekly and yearly nomenclature adopted in <font color="#82750f"><b><i>The Earth Calendar</i></b></font> is prohibited out of the terms of a special <a class="simple" href="license_1.htm">license</a> released for the use of the almanac and of its short date.
+Both personal and commercial use of the name <font color="#82750f"><b><i>The Earth Calendar</i></b></font> and its adopted nomenclature are permitted. Use is granted free of charge under the terms of the license agreement.
 
-<br><br>
+<br><br><br>
 
-We invite the media, in case they would quote this nomenclature, to notify its being part of a trademark characterizing a specific product.
+<center><a class="simple" HREF="license_1.htm">LICENSE AGREEMENT</a></center>
 
 </div>
 
 </FONT>
 
-<br><br><br>
+<br><br>
 
 <center><FONT face="verdana" SIZE="1">
 
