--- a/lab/tec/legale.htm
+++ b/lab/tec/legale.htm
@@ -47,11 +47,7 @@ COPYRIGHT & TRADEMARK
 
 <div align="justify">
 
-<font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> (libro, almanacco, sito Internet) è opera e proprietà del <i>Laboratorio Eudemonia</i>.
-
-<br><br>
-
-La denominazione <font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> ed il logo con la speciale nomenclatura sono entrambi marchi del <i>Laboratorio Eudemonia</i>:
+<font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> (libro, almanacco, sito Internet) è opera e proprietà del <i>Laboratorio Eudemonia</i>. La denominazione <font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> ed il logo con la speciale nomenclatura sono entrambi marchi del <i>Laboratorio Eudemonia</i>:
 
 <br><br><br>
 
@@ -64,6 +60,10 @@ La denominazione <font color="#82750f"><i><b>Il Calendario della Terra</b></i></
 <img src="ns.gif" alt="logo dell'almanacco">
 
 </td></tr></table>
+
+<br><br>
+
+È permesso l'utilizzo sia personale che commerciale della denominazione <font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> e della nomenclatura da esso adottata. L'uso è concesso gratuitamente secondo i termini della licenza d'uso.
 
 <br><br><br>
 
