--- a/lab/tec/license_1.htm
+++ b/lab/tec/license_1.htm
@@ -41,36 +41,71 @@
 
 <FONT FACE="VERDANA" SIZE="2">
 
-LICENSE<img src="blank.gif">:<img src="blank.gif">INTRODUCTION - <a class="simple" href="license_2.htm">CONDITIONS</a>
+LICENSE AGREEMENT
 
-<br><br>
+<br><br><br>
 
 <div align="justify">
 
-<i>The Earth Calendar</i> is characterized by an almanac endowed with precise particularities. This almanac can be used in whichever calendar in place of the traditional almanac. In this way, we obtain a publication that will be distinguished unequivocally from every other, and that will attract unavoidably its user.
+<font color="#82750f"><i><b>The Earth Calendar</b></i></font> is a complete calendrical system characterized by:
+
+<br>
+
+<ul>
+
+<li>exclusive symbolic nomenclature qualifying the days of the week: Moonday, Atomday, Waterday, Winday, Fireday, Earthday, Sunday; the years within a septennium: Year of the Moon, Year of the Atom, Year of Water, Year of Wind, Year of Fire, Year of Earth, Year of the Sun; and the septennia within an epta-septennium: Septennium of the Moon, Septennium of the Atom, Septennium of Water, Septennium of Wind, Septennium of Fire, Septennium of Earth, Septennium of the Sun.
 
 <br><br>
 
-Are you a <b>Publishing House</b> producing one or more commercial calendar editions? Are you a <b>Company</b>, or an <b>Organization</b>, and for the new year would you publish for promotional aim a calendar representative of your ideals and ethical principles, of your degree of technological or social innovation, of your love and respect for nature, and of your desire that peace is stablily spread in the whole world? 
+<li>year zero: 1969 (marking the Moon landing and the birth of the Internet), synchronized with Epoch Time.
 
 <br><br>
 
-Are you <b>Software Developers</b> and wish to use in your applications an almanac, or even simply a date, that already at a glance fully expresses the essence of the new times we are passing through and your being in perfect syntony with them?
-
-
-<br><br>
-
-<i>The Earth Calendar</i> almanac can be just you want. Its particular qualities will allow you to supply to your customers or members or sympathizers with a unique instrument that will benefit them daily, enriching daily their personalities. In this way, you will be even more appreciated and distinguished, standing out brilliant, on a background of gray conformism. 
+<li>long-term cycles: Septennia (seven years) for macro-temporal planning, and Epta-Septennia (seven septennia, 49 years) for ultra-generational visions.
 
 <br><br>
 
-Explore the <a class="simple" href="publishings.htm">electronic edition</a> of <i>The Earth Calendar</i> almanac and <a class="simple" href="license_2.htm">go on</a> to know more on the special licences by means of which you can use this almanac, or its short date, in your publishing or application.
+<li>universal powers: moral qualities for the enhancement of Biological and Synthetic living beings.
+
+<br><br>
+
+<li>celebration of planetary events: Equinoxes, Solstices, mid-seasons.
+
+</ul>
+
+<br>
+
+<font color="#82750f"><i><b>The Earth Calendar</b></i></font> is granted for free personal, commercial, educational, and artistic use, on any medium—paper, software, hardware, blockchain, AI, VR, metaverse, etc.—provided that:
+
+<br>
+
+<ul>
+
+<li>the following visible attribution is included: "Based on <i>The Earth Calendar</i> by <i>Laboratorio Eudemonia</i> - https://earthcal.hyperlinker.org"
+
+<br><br>
+
+<li>the symbolic nomenclature of days, years, and septennia is maintained, as well as the count starting from year zero, the 1969, thus preserving synchronization with Epoch Time.
+
+</ul>
+
+<br>
+
+Translations, cultural adaptations, custom graphics, and additional local holidays are welcome.
+
+<br><br>
+
+This license is global and irrevocable. Laboratorio Eudemonia retains exclusive ownership of <a class="simple" HREF="legal.htm">trademarks and logos</a>.
+
+<br><br><br>
+
+<center><i><a class="linksign" href="dt/index.html">license issued today, Moonday 12, First month, Year 57, of the Atom</a></i></center>
 
 </div>
 
 </FONT>
 
-<br><br><br>
+<br><br>
 
 <center><FONT face="verdana" SIZE="1">
 
