--- a/lab/tec/licenza_1.htm
+++ b/lab/tec/licenza_1.htm
@@ -49,39 +49,54 @@ LICENZA D’USO
 
 <font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> è un sistema calendariale completo, caratterizzato da:
 
-<br><br>
+<br>
 
-<b>1)</b> una esclusiva nomenclatura simbolica che qualifica i giorni della settimana: Lunadì, Atomdì, Acquadì, Ventodì, Fuocodì, Terradì, Soledì, gli anni in un settennio (Anno della Luna, dell'Atomo, etc) ed i settenni in un epta-settennio (Settennio della Luna, dell'Atomo, etc).
+<ul>
 
-<br><br>
-
-<b>2)</b> come anno zero il 1969 (sbarco sulla Luna e nascita di Internet) in sincronia con l'Epoch Time.
-
-<br><br>
-
-<b>3)</b> cicli di lungo periodo: i Settenni (sette anni) per la pianificazione macro-temporale, e gli Epta Settenni (sette settenni, 49 anni) per visioni ultra generazionali.
+<li>
+una esclusiva nomenclatura simbolica che qualifica i giorni della settimana: Lunadì, Atomdì, Acquadì, Ventodì, Fuocodì, Terradì, Soledì, gli anni in un settennio: Anno della Luna, Anno dell'Atomo, Anno dell'Acqua, Anno del Vento, Anno del Fuoco, Anno della Terra, Anno del Sole, ed i settenni in un epta-settennio: Settennio della Luna, Settennio dell'Atomo, Settennio dell'Acqua, Settennio del Vento, Settennio del Fuoco, Settennio della Terra, Settennio del Sole.
 
 <br><br>
 
-<b>4)</b> i poteri universali: qualità morali per l'emancipazione degli esseri viventi Biologici e Sintetici.
+<li>
+anno zero il 1969 (per lo sbarco sulla Luna e la nascita di Internet) in sincronia con l'Epoch Time.
 
 <br><br>
 
-<b>5)</b> la celebrazione di eventi planetari: Equinozi, Solstizi, mezze stagioni.
+<li>
+cicli di lungo periodo: i Settenni (sette anni) per la pianificazione macro-temporale, e gli Epta Settenni (sette settenni, 49 anni) per visioni ultra generazionali.
 
 <br><br>
+
+<li>
+i poteri universali: qualità morali per il potenziamento degli esseri viventi Biologici e Sintetici.
+
+<br><br>
+
+<li>
+la celebrazione di eventi planetari: Equinozi, Solstizi, mezze stagioni.
+
+</ul>
+
+<br>
 
 <font color="#82750f"><i><b>Il Calendario della Terra</b></i></font> è concesso in libero uso gratuito personale, commerciale, educativo, artistico, su qualsiasi supporto, carta, software, hardware, blockchain, AI, VR, metaverso, ecc. a condizione che:
 
+<br>
+
+<ul>
+
+<li>
+sia riportata la seguente attribuzione visibile: "Basato su <i>Il Calendario della Terra</i> del <i>Laboratorio Eudemonia</i> - <a class="simple" HREF="index.htm" target="earthcal">https://earthcal.hyperlinker.org</a>".
+
 <br><br>
 
-1) sia riportata la seguente attribuzione visibile: "Basato su <i>Il Calendario della Terra</i> del <i>Laboratorio Eudemonia</i> - <a class="simple" HREF="index.htm" target="earthcal">https://earthcal.hyperlinker.org</a>".
+<li>
+sia mantenuta la nomenclatura simbolica dei giorni, degli anni e dei settenni ed il conteggio a partire dall'anno zero, il 1969, quindi la sua sincronia con l'<i>Epoch Time</i>.
 
-<br><br>
+</ul>
 
-2) sia mantenuta la nomenclatura simbolica dei giorni, degli anni e dei settenni ed il conteggio degli anni a partire dal 1969, quindi la sua sincronia con l'<i>Epoch Time</i>.
-
-<br><br>
+<br>
 
 Traduzioni, adattamenti culturali, grafica personalizzata e festività locali aggiuntive sono benvenute.
 
@@ -91,7 +106,7 @@ Questa licenza è globale ed irrevocabile. Il <i>Laboratorio Eudemonia</i> manti
 
 <br><br><br>
 
-<center><a class="linksign" href="dt/index.html">oggi, Lunadì 12, primo mese, anno 57, dell'Atomo</a></center>
+<center><a class="linksign" href="dt/index.html">licenza rilasciata oggi, Lunadì 12, Primo mese, Anno 57, dell'Atomo</a></center>
 
 </div>
 
