--- a/lab/tec/pubblicazioni.htm
+++ b/lab/tec/pubblicazioni.htm
@@ -95,44 +95,7 @@ Ecco allora qui<br>immediatamente disponibili on line<br>in formato .pdf:
 
 <br><br>
 
-<!--
-
-in
-
-<br><br>
-
-<img src="arrow_right.gif"> <img src="arrow_right.gif"> <img src="arrow_right.gif"><img src="blank.gif">
-
-<a class="enter" href="icdt/index.htm" title="Il Calendario della Terra on line in formato .html">versione HTML</a>
-
-<img src="blank.gif"><img src="arrow_left.gif"> <img src="arrow_left.gif"> <img src="arrow_left.gif">
-
-<br><br>
-
-<font color="red" size="1">
-
-E' richiesto l'Internet Explorer<br>
-versione 4 o più recente
-
-</font>
-
-<br><br>
-
-od in
-
-<br><br>
-
-<img src="arrow_right.gif"> <img src="arrow_right.gif"> <img src="arrow_right.gif"><img src="blank.gif">
-
-<a class="enter" href="licenza_pdf.htm" title="Il Calendario della Terra on line in formato .pdf">formato .pdf</a>
-
-<img src="blank.gif"><img src="arrow_left.gif"> <img src="arrow_left.gif"> <img src="arrow_left.gif">
-
-<br><br>
-
--->
-
-<center><a class="simple" HREF="licenza_1.htm">LICENZA D'USO</a></center>
+<center><a class="simple" HREF="licenza_1.htm">_ LICENZA D'USO _</a></center>
 
 </FONT>
 
