--- a/lab/tec/publishings.htm
+++ b/lab/tec/publishings.htm
@@ -71,11 +71,11 @@ They are here immediately available on line:
 
 <FONT FACE="VERDANA" SIZE="2">
 
-<a href="pdf_license.htm" title="the book in .pdf format"><img src="book_1.jpg" border="0"></a>
+<a href="ebook.pdf" title="the book in .pdf format"><img src="book_1.jpg" border="0"></a>
 
 <br><br>
 
-<a class="simple" href="pdf_license.htm" title="the book in .pdf format">the book</a>
+<a class="simple" href="ebook.pdf" title="the book in .pdf format">the book</a>
 
 </FONT>
 
@@ -91,50 +91,23 @@ They are here immediately available on line:
 
 <FONT FACE="VERDANA" SIZE="2">
 
-<a href="pdf_license.htm" title="the almanac in .pdf format"><img src="almanac_1.jpg" border="0"></a>
+<a href="almanacs.htm" title="the almanac in .pdf format"><img src="almanac_1.jpg" border="0"></a>
 
 <br><br>
 
-<a class="simple" href="pdf_license.htm" title="the book in .pdf format">the almanac</a>
+<a class="simple" href="almanacs.htm" title="the book in .pdf format">the almanac</a>
 
 </FONT>
 
 </td></tr></table>
 
-<br><br><br>
-
-<!---
-
-<img src="arrow_right.gif"><img src="blank.gif">
-
-<a class="enter" href="javascript:void(0);" onClick="fullScreen('tec/index.htm');" title="The Earth Calendar on line in .HTML format">||<img src="blank.gif" border="0">H T M L<img src="blank.gif" border="0">||</a>
-
-<img src="blank.gif"><img src="arrow_left.gif">
-
-<br>edition
-
 <br><br>
 
-<font color="red" size="1">
-
-You need the Internet Explorer<br>version 4 o higher<br>and few seconds of time<br>for loading
-
-</font>
-
-<br><br><br>
-
--->
-
-<font color="red" size="1">
-
-You need the Acrobat Reader<br>
-and some seconds for the download
-
-</font>
+<center><a class="simple" HREF="license_1.htm">_ LICENSE AGREEMENT _</a></center>
 
 </FONT>
 
-<br><br><br>
+<br><br>
 
 <center><FONT face="verdana" SIZE="1">
 
